# xio_callout

./: .gitignore  CMakeLists.txt  globus-xio-callout-driver.spec  sample_callout.sh  sdn_callout.py
cmake/: FindGlobusXio.cmake
gridftp_hdfs/src/: gridftp_hdfs.c  gridftp_hdfs_recv.c  gridftp_hdfs_send.c
src/: globus_xio_callout_driver.c  globus_xio_callout_driver.h  version.h.in
